src/yini_test/cases/golden/lenient/valid/strings/c-prefix-lowercase.yini
@yini

^ Strings
key = c"hello\nworld"
