src/yini_test/cases/golden/lenient/invalid/strings/classic-string-invalid-unicode.yini
@yini

^ Strings
key = C"\u123"
